--- a/.github/workflows/sims-portability.yml
+++ b/.github/workflows/sims-portability.yml
@@ -38,18 +38,49 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Define Gen0 simulation parameters
+        id: gen0_params
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ "${SIM_PROFILE}" = "full" ]; then
+            echo "seed_start=${{ matrix.chunk.seed_start_full }}" >> "$GITHUB_OUTPUT"
+            echo "seed_end=${{ matrix.chunk.seed_end_full }}" >> "$GITHUB_OUTPUT"
+            echo "n_ind=2200" >> "$GITHUB_OUTPUT"
+            echo "seq_len=5000000" >> "$GITHUB_OUTPUT"
+            echo "n_causal=5000" >> "$GITHUB_OUTPUT"
+            echo "n_pca=2000" >> "$GITHUB_OUTPUT"
+          else
+            echo "seed_start=${{ matrix.chunk.seed_start_quick }}" >> "$GITHUB_OUTPUT"
+            echo "seed_end=${{ matrix.chunk.seed_end_quick }}" >> "$GITHUB_OUTPUT"
+            echo "n_ind=1000" >> "$GITHUB_OUTPUT"
+            echo "seq_len=2000000" >> "$GITHUB_OUTPUT"
+            echo "n_causal=1200" >> "$GITHUB_OUTPUT"
+            echo "n_pca=700" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Restore Gen0 simulation cache
+        id: gen0_cache_restore
+        uses: actions/cache/restore@v4
+        with:
+          path: sims/results_gen0/chunks/gen0_chunk_${{ matrix.chunk.name }}.csv
+          key: gen0-sim-${{ runner.os }}-${{ env.SIM_PROFILE }}-${{ matrix.chunk.name }}-${{ steps.gen0_params.outputs.seed_start }}-${{ steps.gen0_params.outputs.seed_end }}-${{ steps.gen0_params.outputs.n_ind }}-${{ steps.gen0_params.outputs.seq_len }}-${{ steps.gen0_params.outputs.n_causal }}-${{ steps.gen0_params.outputs.n_pca }}-${{ hashFiles('sims/gen0_orthogonalization.py', 'sims/sim_two_pop.py', 'sims/split_data.py', 'sims/train_model.py', 'sims/requirements.txt') }}
+
       - name: Set up Python
+        if: steps.gen0_cache_restore.outputs.cache-hit != 'true'
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
 
       - name: Install dependencies
+        if: steps.gen0_cache_restore.outputs.cache-hit != 'true'
         run: |
           pip install uv
           uv pip install --system -r sims/requirements.txt
 
       - name: Install Plink2
+        if: steps.gen0_cache_restore.outputs.cache-hit != 'true'
         run: |
           set -euo pipefail
           wget -q https://s3.amazonaws.com/plink2-assets/plink2_linux_avx2_20260110.zip -O plink2.zip
@@ -58,6 +89,7 @@ jobs:
           rm -f plink2.zip
 
       - name: Install GCTB
+        if: steps.gen0_cache_restore.outputs.cache-hit != 'true'
         run: |
           set -euo pipefail
           wget -q https://cnsgenomics.com/software/gctb/download/gctb_2.03beta_Linux.zip -O gctb.zip
@@ -67,26 +99,17 @@ jobs:
           rm -rf gctb.zip gctb_bin
 
       - name: Run Gen0 orthogonalization chunk
+        if: steps.gen0_cache_restore.outputs.cache-hit != 'true'
         run: |
           set -euo pipefail
 
-          if [ "${SIM_PROFILE}" = "full" ]; then
-            SEED_START="${{ matrix.chunk.seed_start_full }}"
-            SEED_END="${{ matrix.chunk.seed_end_full }}"
-            N_IND=2200
-            SEQ_LEN=5000000
-            N_CAUSAL=5000
-            N_PCA=2000
-            BAYESR_MAX=$((SEED_END - SEED_START + 1))
-          else
-            SEED_START="${{ matrix.chunk.seed_start_quick }}"
-            SEED_END="${{ matrix.chunk.seed_end_quick }}"
-            N_IND=1000
-            SEQ_LEN=2000000
-            N_CAUSAL=1200
-            N_PCA=700
-            BAYESR_MAX=$((SEED_END - SEED_START + 1))
-          fi
+          SEED_START="${{ steps.gen0_params.outputs.seed_start }}"
+          SEED_END="${{ steps.gen0_params.outputs.seed_end }}"
+          N_IND="${{ steps.gen0_params.outputs.n_ind }}"
+          SEQ_LEN="${{ steps.gen0_params.outputs.seq_len }}"
+          N_CAUSAL="${{ steps.gen0_params.outputs.n_causal }}"
+          N_PCA="${{ steps.gen0_params.outputs.n_pca }}"
+          BAYESR_MAX=$((SEED_END - SEED_START + 1))
 
           OUT_DIR="sims/results_gen0/chunks"
           mkdir -p "$OUT_DIR"
@@ -103,6 +126,13 @@ jobs:
             --out-dir "$OUT_DIR/chunk_${{ matrix.chunk.name }}"
 
           cp "$OUT_DIR/chunk_${{ matrix.chunk.name }}/gen0_orthogonalization_results.csv" "$OUT_DIR/gen0_chunk_${{ matrix.chunk.name }}.csv"
+
+      - name: Save Gen0 simulation cache
+        if: steps.gen0_cache_restore.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v4
+        with:
+          path: sims/results_gen0/chunks/gen0_chunk_${{ matrix.chunk.name }}.csv
+          key: ${{ steps.gen0_cache_restore.outputs.cache-primary-key }}
 
       - name: Upload Gen0 chunk artifact
         uses: actions/upload-artifact@v4
@@ -187,38 +217,61 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Define bottleneck simulation parameters
+        id: bottleneck_params
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ "${SIM_PROFILE}" = "full" ]; then
+            echo "seeds=1,2,3,4,5,6,7,8,9,10" >> "$GITHUB_OUTPUT"
+            echo "gens=${{ matrix.gens.full }}" >> "$GITHUB_OUTPUT"
+            echo "n_per_pop=2000" >> "$GITHUB_OUTPUT"
+            echo "seq_len=5000000" >> "$GITHUB_OUTPUT"
+            echo "n_causal=400" >> "$GITHUB_OUTPUT"
+            echo "min_tags=80" >> "$GITHUB_OUTPUT"
+            echo "workers=4" >> "$GITHUB_OUTPUT"
+          else
+            echo "seeds=1,2,3,4" >> "$GITHUB_OUTPUT"
+            echo "gens=${{ matrix.gens.quick }}" >> "$GITHUB_OUTPUT"
+            echo "n_per_pop=900" >> "$GITHUB_OUTPUT"
+            echo "seq_len=2500000" >> "$GITHUB_OUTPUT"
+            echo "n_causal=220" >> "$GITHUB_OUTPUT"
+            echo "min_tags=45" >> "$GITHUB_OUTPUT"
+            echo "workers=3" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Restore bottleneck simulation cache
+        id: bottleneck_cache_restore
+        uses: actions/cache/restore@v4
+        with:
+          path: sims/results_bottleneck_ld_mechanism/chunks/${{ matrix.scenario }}_${{ matrix.gens.name }}.csv
+          key: bottleneck-sim-${{ runner.os }}-${{ env.SIM_PROFILE }}-${{ matrix.scenario }}-${{ matrix.gens.name }}-${{ steps.bottleneck_params.outputs.seeds }}-${{ steps.bottleneck_params.outputs.gens }}-${{ steps.bottleneck_params.outputs.n_per_pop }}-${{ steps.bottleneck_params.outputs.seq_len }}-${{ steps.bottleneck_params.outputs.n_causal }}-${{ steps.bottleneck_params.outputs.min_tags }}-${{ hashFiles('sims/bottleneck_ld_mechanism.py', 'sims/requirements.txt') }}
+
       - name: Set up Python
+        if: steps.bottleneck_cache_restore.outputs.cache-hit != 'true'
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
 
       - name: Install dependencies
+        if: steps.bottleneck_cache_restore.outputs.cache-hit != 'true'
         run: |
           pip install uv
           uv pip install --system -r sims/requirements.txt
 
       - name: Run bottleneck mechanism chunk
+        if: steps.bottleneck_cache_restore.outputs.cache-hit != 'true'
         run: |
           set -euo pipefail
 
-          if [ "${SIM_PROFILE}" = "full" ]; then
-            SEEDS="1,2,3,4,5,6,7,8,9,10"
-            GENS="${{ matrix.gens.full }}"
-            N_PER_POP=2000
-            SEQ_LEN=5000000
-            N_CAUSAL=400
-            MIN_TAGS=80
-            WORKERS=4
-          else
-            SEEDS="1,2,3,4"
-            GENS="${{ matrix.gens.quick }}"
-            N_PER_POP=900
-            SEQ_LEN=2500000
-            N_CAUSAL=220
-            MIN_TAGS=45
-            WORKERS=3
-          fi
+          SEEDS="${{ steps.bottleneck_params.outputs.seeds }}"
+          GENS="${{ steps.bottleneck_params.outputs.gens }}"
+          N_PER_POP="${{ steps.bottleneck_params.outputs.n_per_pop }}"
+          SEQ_LEN="${{ steps.bottleneck_params.outputs.seq_len }}"
+          N_CAUSAL="${{ steps.bottleneck_params.outputs.n_causal }}"
+          MIN_TAGS="${{ steps.bottleneck_params.outputs.min_tags }}"
+          WORKERS="${{ steps.bottleneck_params.outputs.workers }}"
 
           CHUNK_DIR="sims/results_bottleneck_ld_mechanism/chunks"
           mkdir -p "$CHUNK_DIR"
@@ -234,6 +287,13 @@ jobs:
             --min-tags "$MIN_TAGS" \
             --out-dir "$CHUNK_DIR" \
             --chunk-name "${{ matrix.scenario }}_${{ matrix.gens.name }}"
+
+      - name: Save bottleneck simulation cache
+        if: steps.bottleneck_cache_restore.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v4
+        with:
+          path: sims/results_bottleneck_ld_mechanism/chunks/${{ matrix.scenario }}_${{ matrix.gens.name }}.csv
+          key: ${{ steps.bottleneck_cache_restore.outputs.cache-primary-key }}
 
       - name: Upload bottleneck chunk artifact
         uses: actions/upload-artifact@v4
