--- a/.github/workflows/sims-portability.yml
+++ b/.github/workflows/sims-portability.yml
@@ -249,7 +249,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: sims/results_bottleneck_ld_mechanism/chunks/${{ matrix.scenario }}_${{ matrix.gens.name }}.csv
-          key: bottleneck-sim-${{ runner.os }}-${{ env.SIM_PROFILE }}-${{ matrix.scenario }}-${{ matrix.gens.name }}-${{ steps.bottleneck_params.outputs.seeds_key }}-${{ steps.bottleneck_params.outputs.gens_key }}-${{ steps.bottleneck_params.outputs.n_per_pop }}-${{ steps.bottleneck_params.outputs.seq_len }}-${{ steps.bottleneck_params.outputs.n_causal }}-${{ steps.bottleneck_params.outputs.min_tags }}-${{ hashFiles('sims/bottleneck_ld_mechanism.py', 'sims/requirements.txt') }}
+          key: bottleneck-sim-${{ runner.os }}-${{ env.SIM_PROFILE }}-${{ matrix.scenario }}-${{ matrix.gens.name }}-${{ steps.bottleneck_params.outputs.seeds_key }}-${{ steps.bottleneck_params.outputs.gens_key }}-${{ steps.bottleneck_params.outputs.n_per_pop }}-${{ steps.bottleneck_params.outputs.seq_len }}-${{ steps.bottleneck_params.outputs.n_causal }}-${{ steps.bottleneck_params.outputs.min_tags }}-${{ hashFiles('sims/bottleneck_ld_mechanism.py', 'sims/sim_two_pop.py', 'sims/requirements.txt') }}
 
       - name: Set up Python
         if: steps.bottleneck_cache_restore.outputs.cache-hit != 'true'
